--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
   "name": "polyframe",
-  "version": "1.0.0",
-  "description": "angular app for converting images to low-polygon",
+  "version": "1.0.1",
+  "description": "React app for converting images to low-polygon",
   "keywords": [
-    "angularjs",
-    "angular",
-    "app",
+    "react",
     "polygon",
     "low-polygon",
-    "low-poly",
-    "generator"
+    "low-poly"
   ],
-  "main": "public/js/app.js",
+  "main": "./public/src/App.js",
   "author": "kathleen daily",
   "license": "MIT",
   "scripts": {
-    "dev": "lite-server"
+    "build": "webpack",
+    "start": "webpack-dev-server --open --mode development"
   },
   "repository": {
     "type": "git",
@@ -25,12 +23,20 @@
     "url": "https://github.com/kathleendaily/polyframe/issues"
   },
   "dependencies": {
-    "angular": "^1.3.15",
-    "angular-ui-router": "^0.2.15",
-    "jquery": "*",
-    "materialize-css": "^0.97.6"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
-    "lite-server": "^2.2"
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.7.2",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.1"
   }
 }
