--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "author": "kathleen daily",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server --open --mode development",
+    "build": "npm run clean && webpack",
+    "clean": "rm -rf dist",
+    "start": "npm run build && webpack-dev-server --open --mode development",
     "lint": "eslint --fix *.js ./src/*/*.js"
   },
   "repository": {
@@ -26,7 +27,9 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -34,15 +37,18 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.0.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.14.2",
     "eslint-watch": "^5.1.2",
+    "file-loader": "^4.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.7.2",
+    "style-loader": "^0.23.1",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.1"
