--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "npm run clean && webpack",
     "clean": "rm -rf dist",
     "start": "npm run build && webpack-dev-server --open --mode development",
-    "lint": "eslint --fix *.js ./src/*/*.js"
+    "lint": "eslint --ext .js --ext .jsx ."
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "url": "https://github.com/kathleendaily/polyframe/issues"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
@@ -37,6 +38,8 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "css-loader": "^3.0.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -47,6 +50,8 @@
     "file-loader": "^4.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "prop-types": "^15.7.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.34.0",
