--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^3.0.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
